gen/cmlParser.java
// Generated from /home/jay/hdd/kotlin/charman/antlr/cmlParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class cmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DATA=1, IDENT=2, B_O=3, B_C=4, INSTANCE=5, BR_O=6, BR_C=7, SEMI=8, TEMPLATE=9, 
		FUN=10, P_O=11, P_C=12, FIELD=13, ASSIGN=14, COMMA=15, VAR=16, IF=17, 
		ELSE=18, WHILE=19, FOR=20, IN=21, BREAK=22, RETURN=23, INT=24, BOOL=25, 
		PLACEHOLDER=26, DOT=27, UN_OP=28, DICE=29, MD_OP=30, AS_OP=31, MOD_OP=32, 
		COMPARISON_OP=33, LOGIC_OP=34, BITWISE_OP=35, QMARK=36, COLON=37, ELIPSIS=38, 
		UNTIL=39, STRING_LIT=40;
	public static final int
		RULE_program = 0, RULE_topLevel = 1, RULE_declSet = 2, RULE_decl = 3, 
		RULE_stmtSet = 4, RULE_argDs = 5, RULE_argDsNonEmpty = 6, RULE_stmt = 7, 
		RULE_expr = 8, RULE_kvpList = 9, RULE_nonEmptyKvp = 10, RULE_argsList = 11, 
		RULE_nonEmptyArgs = 12, RULE_stringExpr = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "topLevel", "declSet", "decl", "stmtSet", "argDs", "argDsNonEmpty", 
			"stmt", "expr", "kvpList", "nonEmptyKvp", "argsList", "nonEmptyArgs", 
			"stringExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DATA", "IDENT", "B_O", "B_C", "INSTANCE", "BR_O", "BR_C", "SEMI", 
			"TEMPLATE", "FUN", "P_O", "P_C", "FIELD", "ASSIGN", "COMMA", "VAR", "IF", 
			"ELSE", "WHILE", "FOR", "IN", "BREAK", "RETURN", "INT", "BOOL", "PLACEHOLDER", 
			"DOT", "UN_OP", "DICE", "MD_OP", "AS_OP", "MOD_OP", "COMPARISON_OP", 
			"LOGIC_OP", "BITWISE_OP", "QMARK", "COLON", "ELIPSIS", "UNTIL", "STRING_LIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cmlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cmlParser.EOF, 0); }
		public List<TopLevelContext> topLevel() {
			return getRuleContexts(TopLevelContext.class);
		}
		public TopLevelContext topLevel(int i) {
			return getRuleContext(TopLevelContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 546L) != 0)) {
				{
				{
				setState(28);
				topLevel();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelContext extends ParserRuleContext {
		public TopLevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevel; }
	 
		public TopLevelContext() { }
		public void copyFrom(TopLevelContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends TopLevelContext {
		public Token kind;
		public ArgDsContext args;
		public DeclSetContext body;
		public TerminalNode TEMPLATE() { return getToken(cmlParser.TEMPLATE, 0); }
		public TerminalNode BR_O() { return getToken(cmlParser.BR_O, 0); }
		public TerminalNode BR_C() { return getToken(cmlParser.BR_C, 0); }
		public TerminalNode B_O() { return getToken(cmlParser.B_O, 0); }
		public TerminalNode B_C() { return getToken(cmlParser.B_C, 0); }
		public TerminalNode IDENT() { return getToken(cmlParser.IDENT, 0); }
		public ArgDsContext argDs() {
			return getRuleContext(ArgDsContext.class,0);
		}
		public DeclSetContext declSet() {
			return getRuleContext(DeclSetContext.class,0);
		}
		public TemplateContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstanceContext extends TopLevelContext {
		public Token templ;
		public Token name;
		public ArgsListContext args;
		public TerminalNode INSTANCE() { return getToken(cmlParser.INSTANCE, 0); }
		public TerminalNode BR_O() { return getToken(cmlParser.BR_O, 0); }
		public TerminalNode BR_C() { return getToken(cmlParser.BR_C, 0); }
		public TerminalNode SEMI() { return getToken(cmlParser.SEMI, 0); }
		public List<TerminalNode> IDENT() { return getTokens(cmlParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(cmlParser.IDENT, i);
		}
		public ArgsListContext argsList() {
			return getRuleContext(ArgsListContext.class,0);
		}
		public InstanceContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterInstance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitInstance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitInstance(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends TopLevelContext {
		public Token kind;
		public Token name;
		public DeclSetContext body;
		public TerminalNode DATA() { return getToken(cmlParser.DATA, 0); }
		public TerminalNode B_O() { return getToken(cmlParser.B_O, 0); }
		public TerminalNode B_C() { return getToken(cmlParser.B_C, 0); }
		public List<TerminalNode> IDENT() { return getTokens(cmlParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(cmlParser.IDENT, i);
		}
		public DeclSetContext declSet() {
			return getRuleContext(DeclSetContext.class,0);
		}
		public TypeContext(TopLevelContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelContext topLevel() throws RecognitionException {
		TopLevelContext _localctx = new TopLevelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevel);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATA:
				_localctx = new TypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				match(DATA);
				setState(37);
				((TypeContext)_localctx).kind = match(IDENT);
				setState(38);
				((TypeContext)_localctx).name = match(IDENT);
				setState(39);
				match(B_O);
				setState(40);
				((TypeContext)_localctx).body = declSet(0);
				setState(41);
				match(B_C);
				}
				break;
			case INSTANCE:
				_localctx = new InstanceContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				match(INSTANCE);
				setState(44);
				((InstanceContext)_localctx).templ = match(IDENT);
				setState(45);
				((InstanceContext)_localctx).name = match(IDENT);
				setState(46);
				match(BR_O);
				setState(47);
				((InstanceContext)_localctx).args = argsList();
				setState(48);
				match(BR_C);
				setState(49);
				match(SEMI);
				}
				break;
			case TEMPLATE:
				_localctx = new TemplateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				match(TEMPLATE);
				setState(52);
				((TemplateContext)_localctx).kind = match(IDENT);
				setState(53);
				match(BR_O);
				setState(54);
				((TemplateContext)_localctx).args = argDs();
				setState(55);
				match(BR_C);
				setState(56);
				match(B_O);
				setState(57);
				((TemplateContext)_localctx).body = declSet(0);
				setState(58);
				match(B_C);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclSetContext extends ParserRuleContext {
		public DeclSetContext prev;
		public DeclContext d;
		public DeclSetContext declSet() {
			return getRuleContext(DeclSetContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterDeclSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitDeclSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitDeclSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclSetContext declSet() throws RecognitionException {
		return declSet(0);
	}

	private DeclSetContext declSet(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclSetContext _localctx = new DeclSetContext(_ctx, _parentState);
		DeclSetContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_declSet, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclSetContext(_parentctx, _parentState);
					_localctx.prev = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_declSet);
					setState(63);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(64);
					((DeclSetContext)_localctx).d = decl();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FieldDeclContext extends DeclContext {
		public Token name;
		public ExprContext init;
		public TerminalNode FIELD() { return getToken(cmlParser.FIELD, 0); }
		public TerminalNode ASSIGN() { return getToken(cmlParser.ASSIGN, 0); }
		public TerminalNode SEMI() { return getToken(cmlParser.SEMI, 0); }
		public TerminalNode IDENT() { return getToken(cmlParser.IDENT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FieldDeclContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterFieldDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitFieldDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitFieldDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunDeclContext extends DeclContext {
		public Token name;
		public ArgDsContext args;
		public StmtSetContext body;
		public TerminalNode FUN() { return getToken(cmlParser.FUN, 0); }
		public TerminalNode P_O() { return getToken(cmlParser.P_O, 0); }
		public TerminalNode P_C() { return getToken(cmlParser.P_C, 0); }
		public TerminalNode B_O() { return getToken(cmlParser.B_O, 0); }
		public TerminalNode B_C() { return getToken(cmlParser.B_C, 0); }
		public TerminalNode IDENT() { return getToken(cmlParser.IDENT, 0); }
		public ArgDsContext argDs() {
			return getRuleContext(ArgDsContext.class,0);
		}
		public StmtSetContext stmtSet() {
			return getRuleContext(StmtSetContext.class,0);
		}
		public FunDeclContext(DeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterFunDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitFunDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitFunDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				_localctx = new FunDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(FUN);
				setState(71);
				((FunDeclContext)_localctx).name = match(IDENT);
				setState(72);
				match(P_O);
				setState(73);
				((FunDeclContext)_localctx).args = argDs();
				setState(74);
				match(P_C);
				setState(75);
				match(B_O);
				setState(76);
				((FunDeclContext)_localctx).body = stmtSet(0);
				setState(77);
				match(B_C);
				}
				break;
			case FIELD:
				_localctx = new FieldDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(FIELD);
				setState(80);
				((FieldDeclContext)_localctx).name = match(IDENT);
				setState(81);
				match(ASSIGN);
				setState(82);
				((FieldDeclContext)_localctx).init = expr(0);
				setState(83);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtSetContext extends ParserRuleContext {
		public StmtSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtSet; }
	 
		public StmtSetContext() { }
		public void copyFrom(StmtSetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NoStmtContext extends StmtSetContext {
		public NoStmtContext(StmtSetContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterNoStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitNoStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitNoStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StmtsContext extends StmtSetContext {
		public StmtSetContext prev;
		public StmtContext s;
		public StmtSetContext stmtSet() {
			return getRuleContext(StmtSetContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtsContext(StmtSetContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitStmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtSetContext stmtSet() throws RecognitionException {
		return stmtSet(0);
	}

	private StmtSetContext stmtSet(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StmtSetContext _localctx = new StmtSetContext(_ctx, _parentState);
		StmtSetContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_stmtSet, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new NoStmtContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			}
			_ctx.stop = _input.LT(-1);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new StmtsContext(new StmtSetContext(_parentctx, _parentState));
					((StmtsContext)_localctx).prev = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_stmtSet);
					setState(88);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(89);
					((StmtsContext)_localctx).s = stmt();
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgDsContext extends ParserRuleContext {
		public ArgDsNonEmptyContext args;
		public ArgDsNonEmptyContext argDsNonEmpty() {
			return getRuleContext(ArgDsNonEmptyContext.class,0);
		}
		public ArgDsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argDs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterArgDs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitArgDs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitArgDs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgDsContext argDs() throws RecognitionException {
		ArgDsContext _localctx = new ArgDsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argDs);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BR_C:
			case P_C:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				((ArgDsContext)_localctx).args = argDsNonEmpty(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgDsNonEmptyContext extends ParserRuleContext {
		public ArgDsNonEmptyContext args;
		public Token arg;
		public TerminalNode IDENT() { return getToken(cmlParser.IDENT, 0); }
		public TerminalNode COMMA() { return getToken(cmlParser.COMMA, 0); }
		public ArgDsNonEmptyContext argDsNonEmpty() {
			return getRuleContext(ArgDsNonEmptyContext.class,0);
		}
		public ArgDsNonEmptyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argDsNonEmpty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).enterArgDsNonEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cmlParserListener ) ((cmlParserListener)listener).exitArgDsNonEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cmlParserVisitor ) return ((cmlParserVisitor<? extends T>)visitor).visitArgDsNonEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgDsNonEmptyContext argDsNonEmpty() throws RecognitionException {
		return argDsNonEmpty(0);
	}

	private ArgDsNonEmptyContext argDsNonEmpty(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArgDsNonEmptyContext _localctx = new ArgDsNonEmptyContext(_ctx, _parentState);
		ArgDsNonEmptyContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_argDsNonEmpty, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(100);
			((ArgDsNonEmptyContext)_localctx).arg = match(IDENT);
			}
			_ctx.stop = _input.LT(-1);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArgDsNonEmptyContext(_parentctx, _parentState);
					_localctx.args = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_argDsNonEmpty);
					setState(102);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(103);
					match(COMMA);
					setState(104);
					((ArgDsNonEmptyContext)_localctx).arg = match(IDENT);
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
